# mcp-mux

./: .gitignore  README.md  main.py  pyproject.toml
mcp_router/: __init__.py  config.yaml  main.py  requirements.txt  server.py
mcp_router/core/: __init__.py  config_loader.py  process_manager.py
mcp_router/routes/: __init__.py  discovery.py
tests/: test_router.py
